--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "project-mimino_g11",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Nata-Curly.github.io/project-mimino_g11",
+  "homepage": "https://eazzyk.github.io/test",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-mimino_g11/"
+    "build": "parcel build src/*.html --public-url /test/"
   },
   "repository": {
     "type": "git",
